Fix build workflow: install package deps + run ruff/pytest on Windows

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,20 +9,34 @@ on:
 jobs:
   build:
     runs-on: windows-latest
+
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v4
+
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
-      - name: Install dependencies
+          python-version: "3.11"
+
+      - name: Install package + dev deps
         run: |
           python -m pip install --upgrade pip
-          python -m pip install pytest
-          # Install PySide6 only for GUI build; optional
+          pip install -e ".[dev]"
+
+      # Optional: only keep this if your GUI build actually needs it in CI
+      - name: Install PySide6 (optional)
+        run: |
           python -m pip install PySide6
+
+      - name: Ruff (lint)
+        run: |
+          ruff check src tests
+
       - name: Run tests
-        run: pytest -q --disable-warnings
+        run: |
+          pytest -q --disable-warnings
+
       - name: Build (placeholder)
         run: |
           echo "Nuitka build steps would go here."
