--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,55 +1,78 @@
-name: Build
+name: Build (Windows EXE)
 
 on:
-  push:
-    branches: [ "main" ]
   workflow_dispatch:
+  push:
+    tags:
+      - "v*"
+
+permissions:
+  contents: write
 
 jobs:
-  build:
-    runs-on: windows-2025
+  build-windows:
+    runs-on: windows-latest
 
     steps:
       - uses: actions/checkout@v4
 
       - uses: actions/setup-python@v5
         with:
-          python-version: "3.11"
+          python-version: "3.12"
 
-      - name: Install package + dev deps
+      - name: Install deps
         shell: pwsh
         run: |
           python -m pip install --upgrade pip
           pip install -e ".[dev]"
           python -m pip install PySide6
 
-      - name: Ruff (lint)
+      - name: Lint
         run: ruff check src tests
 
-      - name: Run tests
+      - name: Tests
         run: pytest -q --disable-warnings
 
-      - name: Build EXE (Nuitka)
+      - name: Build EXE (Nuitka standalone)
         shell: pwsh
         run: |
-          # Clean output folders
           if (Test-Path dist) { Remove-Item -Recurse -Force dist }
-          if (Test-Path build) { Remove-Item -Recurse -Force build }
+          if (Test-Path build_gui_entry.build) { Remove-Item -Recurse -Force build_gui_entry.build }
 
-          # Build one-file exe
           python -m nuitka `
             --standalone `
-            --onefile `
-            --assume-yes-for-downloads `
-            --follow-imports `
-            --plugin-enable=pyside6 `
-            --output-dir=dist `
-            --output-filename=ProducerOS.exe `
+            --enable-plugin=pyside6 `
             --windows-console-mode=disable `
-            --main=src/producer_os/gui.py
+            --output-dir=dist `
+            --output-filename=ProducerOS `
+            --include-package=producer_os `
+            --include-package=librosa `
+            --include-package=scipy `
+            --include-package=numba `
+            --include-package=llvmlite `
+            --include-module=soundfile `
+            --include-package-data=librosa `
+            --include-package-data=scipy `
+            --include-package-data=numba `
+            --include-package-data=llvmlite `
+            --include-module=sklearn `
+            --include-module=packaging `
+            --include-module=joblib `
+            --module-parameter=numba-disable-jit=yes `
+            build_gui_entry.py
 
-      - name: Upload artifact
+          # Zip the whole dist folder that contains the exe + DLLs
+          if (Test-Path ProducerOS-windows.zip) { Remove-Item ProducerOS-windows.zip -Force }
+          Compress-Archive -Path "dist\build_gui_entry.dist\*" -DestinationPath "ProducerOS-windows.zip"
+
+      - name: Upload build artifact
         uses: actions/upload-artifact@v4
         with:
           name: ProducerOS-windows
-          path: dist/ProducerOS.exe
+          path: ProducerOS-windows.zip
+
+      - name: Create GitHub Release (on tag)
+        if: startsWith(github.ref, 'refs/tags/v')
+        uses: softprops/action-gh-release@v2
+        with:
+          files: ProducerOS-windows.zip
