--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,16 +21,8 @@ dependencies = [
 ]
 
 [project.optional-dependencies]
-dev = [
-  "pytest",
-  "ruff",
-  "mypy",
-  "nuitka>=2.5",
-  "zstandard>=0.23",
-]
-gui = [
-  "PySide6>=6.6",
-]
+gui = ["PySide6>=6.5"]
+dev = ["pytest", "ruff", "mypy", "nuitka>=2.5", "zstandard>=0.23"]
 
 [tool.ruff]
 line-length = 120
