--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,10 @@ dependencies = [
 ]
 
 [project.optional-dependencies]
+gui = [
+  "PySide6",
+  "pyqtdarktheme>=2.1.0",
+]
 dev = [
   "pytest",
   "ruff",
