--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,7 +35,7 @@ jobs:
         shell: pwsh
         run: |
           python -m pip install --upgrade pip
-          python -m pip install -e .[dev]
+          python -m pip install -e .[dev,gui]
           python -m pip uninstall -y nuitka
           python -m pip install --no-cache-dir nuitka==2.8.10
           python -m nuitka --version
@@ -49,12 +49,20 @@ jobs:
       - name: Build standalone (Nuitka)
         shell: pwsh
         run: |
-          python -m nuitka `
-            --mode=standalone `
-            --assume-yes-for-downloads `
-            --output-dir=dist `
-            --output-filename=ProducerOS `
-            build_gui_entry.py
+          $nuitkaArgs = @(
+            "--mode=standalone",
+            "--assume-yes-for-downloads",
+            "--output-dir=dist",
+            "--output-filename=ProducerOS",
+            "--include-package=qdarktheme",
+            "--include-package-data=qdarktheme"
+          )
+          if (Test-Path "assets\app_icon.ico") {
+            $nuitkaArgs += "--windows-icon-from-ico=assets/app_icon.ico"
+          }
+          $nuitkaArgs += "build_gui_entry.py"
+
+          python -m nuitka @nuitkaArgs
 
       - name: Zip portable
         shell: pwsh
