--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,7 +35,7 @@ jobs:
         shell: pwsh
         run: |
           python -m pip install --upgrade pip
-          python -m pip install -e .[dev,gui]
+          python -m pip install -e ".[dev,gui]"
           python -m pip uninstall -y nuitka
           python -m pip install --no-cache-dir nuitka==2.8.10
           python -m nuitka --version
