--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -4,11 +4,16 @@ on:
   push:
     branches: ["main"]
 
+concurrency:
+  group: auto-version-main
+  cancel-in-progress: true
+
 permissions:
   contents: write
 
 jobs:
   version:
+    if: github.actor != 'github-actions[bot]'
     runs-on: ubuntu-latest
 
     steps:
@@ -27,9 +32,23 @@ jobs:
           python -m pip install --upgrade pip
           pip install python-semantic-release
 
-      - name: Run semantic versioning
+      - name: Detect existing version tag on HEAD
+        id: head_tag
+        shell: bash
+        run: |
+          git fetch --tags --force
+          TAG="$(git tag --points-at HEAD | grep -E '^v[0-9]+\.[0-9]+\.[0-9]+$' | head -n 1 || true)"
+          if [ -n "$TAG" ]; then
+            echo "has_tag=true" >> "$GITHUB_OUTPUT"
+            echo "tag=$TAG" >> "$GITHUB_OUTPUT"
+            echo "Version tag already exists on HEAD ($TAG); skipping semantic-release."
+          else
+            echo "has_tag=false" >> "$GITHUB_OUTPUT"
+          fi
+
+      - name: Run semantic versioning (create/update tag)
+        if: steps.head_tag.outputs.has_tag != 'true'
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           semantic-release version
-          semantic-release publish
