--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -42,6 +42,10 @@ jobs:
         run: |
           mypy src/producer_os
 
+      - name: GUI spec-lock (structure)
+        run: |
+          pytest -q tests/test_gui_spec_lock.py
+
       - name: Pytest
         run: |
           pytest -q --disable-warnings
